--- a/package.json
+++ b/package.json
@@ -5,6 +5,13 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
     "express": "^4.18.2"
-  }
+  },
+  "version": "1.0.0",
+  "description": "This lab exercise focuses on:",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
